Add robust grid CIR alignment
